# clover_sim

./: .gitignore  Cargo.toml  Readme.md  build_release.sh  go.mod  go.sum  setup.sh
.github/workflows/: build.yml
docs/: README.md  _sidebar.md  advanced_usage.md  getting_started.md  index.html  install.md  manual_install.md  tasks.md  usage.md  ws.md  wsl.md
sim/: build.sh
sim/cloversim/: CMakeLists.txt  package.xml  setup.py
sim/cloversim/launch/: copter.launch  simulator.launch
sim/cloversim/scripts/: sim_proxy  taskmaster
sim/cloversim/src/cloversim/: checker.py  randomization.py  score.py  task.py  utils.py
sim/cloversim/src/cloversim/generation/: __init__.py  aruco.py  basic.py  image.py  material.py  validate.py  world.py
src/: container.go  containerPlugins.go  filelock.rs  layer.go  logger.go  main.go  main.rs  network.go  overlay.go  prepare.go  rosLayer.go  simulator.go  simulatorControl.go  task.go  taskScore.go  utils.go  virgl.go  workspace.go
src/cli/: Cargo.toml  cli.rs  err.rs  launch_cli.rs  mod.rs
src/cli/src/: cli.rs  err.rs  launch_cli.rs  lib.rs
src/color/: color.go  hash.go
src/lib/: Cargo.toml
src/lib/src/: err.rs  launch_event.rs  lib.rs  rpc.rs  score.rs
src/node/: Cargo.toml  clean.rs  cmd.rs  err.rs  local_files.rs  mod.rs  rpc.rs  score.rs  simhandle.rs  task.rs  workroot.rs  workspace.rs
src/node/launch/: base.rs  container.rs  fs.rs  launch.rs  mod.rs  network.rs  ros.rs  sdnotif.rs  x11.rs
src/node/src/: clean.rs  cmd.rs  errhelper.rs  filelock.rs  lib.rs  rpc.rs  simhandle.rs  task.rs  workroot.rs  workspace.rs
src/node/src/launch/: base.rs  base_runc.json  container.rs  fs.rs  launch.rs  mod.rs  network.rs  ros.rs  sdnotif.rs  x11.rs
src/repc/: Cargo.toml
src/repc/src/: lib.rs
src/reps/: Cargo.toml
src/reps/src/: lib.rs  proxy.rs
src/web/: index.html  package.json  simvsext.tsx  tsconfig.json  vite.config.ts
src/web/src/: App.tsx  CommonDialogs.tsx  DialogContext.tsx  Launch.tsx  Managment.tsx  Score.tsx  TaskDescription.module.css  TaskDescription.tsx  api.ts  index.tsx  taskdesc.tsx
tasks/base_task/: CMakeLists.txt  README.md  package.xml  setup.py
tasks/base_task/models/example_model/: model.config  model.sdf
tasks/base_task/scripts/: generate_world.py
tasks/base_task/src/cloversim_task/: checker.py  randomization.py  world.py
tasks/example_task/: CMakeLists.txt  package.xml
tasks/example_task/models/example_model/: model.sdf
tasks/example_task/src/cloversim_task/: checker.py  colors.py  randomization.py  world.py
virgl/: libvirglrenderer.so.1  virgl_test_server
