[package]
name = "cloversim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
async-trait = "0.1.60"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.91"

tokio = { version = "1.24.2", features = [
  "fs",
  "rt-multi-thread",
  "macros",
  "process",
  "time",
  "sync",
  "net",
] }
futures = { version = "0.3.25" }

clap = { version = "4.0.32", features = ["derive"] }

sys-mount = "2.0.1"
oci-spec = "0.5.8"
once_cell = "1.17.0"
rustyline-async = "0.3.0"
serde-xml-rs = "0.6.0"
open = "3.2.0"
termimad = "0.20.6"
crossterm = "0.26.0"
