[workspace]
members = ["src/lib", "src/node", "src/cli", "src/reps", "src/repc"]

[package]
name = "cloversim"
version = "0.1.0"
edition = "2021"

[dependencies]
cloversim_lib = { path="src/lib" }
cloversim_cli = { path="src/cli" }
cloversim_node = { path="src/node" }

tokio = { version = "1.23.0", features = [
  "fs",
  "rt-multi-thread",
  "macros",
  "process",
  "time",
  "sync",
  "net",
] }
http = "0.2.9"
