[package]
name = "cloversim_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
cloversim_lib = { path="../lib" }
cloversim_reps = { path="../reps" }
cloversim_repc = { path="../repc" }

tokio = { version = "1.23.0", features = [
  "fs",
  "rt-multi-thread",
  "macros",
  "process",
  "time",
  "sync",
  "net",
] }

termimad = "0.20.6"
rustyline-async = "0.3.0"
crossterm = "0.26.0"
clap = { version = "4.0.32", features = ["derive"] }
rand = "0.8.5"
