[package]
name = "cloversim_node"
version = "0.1.0"
edition = "2021"

[dependencies]
cloversim_lib = { path="../lib" }

futures = { version = "0.3.25" }
async-trait = "0.1.60"
rand = "0.8.5"


serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.91"
serde-xml-rs = "0.6.0"

tokio = { version = "1.23.0", features = [
  "fs",
  "rt-multi-thread",
  "macros",
  "process",
  "time",
  "sync",
  "net",
] }

sys-mount = "2.0.1"
oci-spec = "0.5.8"
async-broadcast = "0.5.1"
