[package]
name = "cloversim_repc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-broadcast = "0.5.1"
async-trait = "0.1.64"
cloversim_lib = { path = "../lib" }
futures = "0.3.26"
reqwest = { version = "0.11.14", features = [
  "json",
  "rustls-tls-webpki-roots",
], default-features = false }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["rt", "macros"] }
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-native-roots"] }
