[package]
name = "cloversim_reps"
version = "0.1.0"
edition = "2021"

[dependencies]
cloversim_lib = { path="../lib" }
axum = { version = "0.6.7", features = ["ws", "headers"] }
http = "0.2.9"

tokio = { version = "1.25.0", features = ["net"] }
tower-http = { version = "0.3.5", features = ["set-header"] }
serde_json = "1.0.93"
mime_guess = "2.0.4"
include_dir = "0.7.3"

